--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,7 @@
 {
   "name": "elite-schedule-app",
-  "integrations": {},
+  "integrations": {
+    "cordova": {}
+  },
   "type": "ionic-angular"
 }
