--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "cordova-android": "^8.1.0",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.4",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.4",
+    "@types/lodash": "4.14.121",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
