--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
+    "@ionic-native/sqlite": "^5.19.1",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "^8.1.0",
+    "cordova-sqlite-storage": "^4.0.0",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
     "lodash": "^4.17.4",
@@ -54,7 +56,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
